--- a/FMac/combine_Historical_files.ipynb
+++ b/FMac/combine_Historical_files.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -22,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def fillNAN(df):\n",
@@ -50,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def changedatatype(df):\n",
@@ -63,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def fillNA(df):\n",
@@ -92,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def changedtype(df):\n",
@@ -107,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def createOriginationCombined(str):\n",
@@ -135,7 +147,7 @@
     "            sample_df['ltv_bins'] = pd.cut(sample_df.ltv[sample_df.ltv<999],5,include_lowest=True)\n",
     "            \n",
     "            sample_df['Year'] = ['19'+x if x=='99' else '20'+x for x in (sample_df['id_loan'].apply(lambda x: x[2:4]))]\n",
-    "            perf_df.to_csv(file, mode='a', header=writeHeader1,index=False,encoding='utf-8')\n",
+    "            sample_df.to_csv(file, mode='a', header=writeHeader1,index=False,encoding='utf-8')\n",
     "            writeHeader1=False\n",
     "    return sample_df"
    ]
@@ -143,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def createPerformanceCombined(str): \n",
@@ -247,7 +261,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def main():\n",
@@ -265,8 +281,9 @@
     "    orig1_df = createOriginationCombined(sampleOrigFiles)\n",
     "    per1_df = createPerformanceCombined(samplePerfFiles)\n",
     "    \n",
-    "    combined1_df = orig_df.merge(per_df,on='id_loan')\n",
-    "    combined_df.to_csv('combined_SF_smaple_data.csv', encoding='utf-8', index=False)\n",
+    "    combined_sample_df = orig1_df.join(per1_df,on='id_loan',lsuffix='_')\n",
+    "    combined_sample_df.drop('id_loan_',axis=1,inplace=True)\n",
+    "    combined_sample_df.to_csv('combined_SF_smaple_data.csv', encoding='utf-8', index=False)\n",
     "    \n",
     "#     orig2_df = createOriginationCombined(historical_Files)\n",
     "#     per2_df = createPerformanceCombined(historical_timeFiles)\n",
@@ -375,28 +392,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
