--- a/FMac/combine_sample_files.ipynb
+++ b/FMac/combine_sample_files.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Prgramitically Log in to Freddie Mac Webisite and download all the files based on request\n",
@@ -23,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def fillNAN(df):\n",
@@ -51,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def changedatatype(df):\n",
@@ -64,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def fillNA(df):\n",
@@ -94,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def changedtype(df):\n",
@@ -109,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def createOriginationCombined(str):\n",
@@ -137,7 +149,7 @@
     "            sample_df['ltv_bins'] = pd.cut(sample_df.ltv[sample_df.ltv<999],5,include_lowest=True)\n",
     "            \n",
     "            sample_df['Year'] = ['19'+x if x=='99' else '20'+x for x in (sample_df['id_loan'].apply(lambda x: x[2:4]))]\n",
-    "            perf_df.to_csv(file, mode='a', header=writeHeader1,index=False,encoding='utf-8')\n",
+    "            sample_df.to_csv(file, mode='a', header=writeHeader1,index=False,encoding='utf-8')\n",
     "            writeHeader1=False\n",
     "    return sample_df"
    ]
@@ -145,7 +157,9 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def createPerformanceCombined(str): \n",
@@ -249,7 +263,9 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def main():\n",
@@ -262,7 +278,7 @@
     "    orig_df = createOriginationCombined(sampleOrigFiles)\n",
     "    per_df = createPerformanceCombined(samplePerfFiles)\n",
     "    \n",
-    "    combined_df = sample_df.join(perf_df,on='id_loan',lsuffix='_')\n",
+    "    combined_df = orig_df.join(per_df,on='id_loan',lsuffix='_')\n",
     "    combined_df.drop('id_loan_',axis=1,inplace=True)\n",
     "    combined_df.to_csv('combined_SF_smaple_data.csv', encoding='utf-8', index=False)"
    ]
@@ -345,13 +361,7 @@
       "Working on  SampleInputFiles\\sample_svcg_2014.txt:  82%|█████████████████████████▌     | 14/17 [06:09<01:19, 26.40s/it]\n",
       "Working on  SampleInputFiles\\sample_svcg_2014.txt:  88%|███████████████████████████▎   | 15/17 [06:27<00:51, 25.82s/it]\n",
       "Working on  SampleInputFiles\\sample_svcg_2016.txt:  88%|███████████████████████████▎   | 15/17 [06:27<00:51, 25.82s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2016.txt:  94%|█████████████████████████████▏ | 16/17 [06:37<00:24, 24.85s/it]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Working on  SampleInputFiles\\sample_svcg_2016.txt:  94%|█████████████████████████████▏ | 16/17 [06:37<00:24, 24.85s/it]\n",
       "Working on  SampleInputFiles\\sample_svcg_2017.txt:  94%|█████████████████████████████▏ | 16/17 [06:37<00:24, 24.85s/it]\n",
       "Working on  SampleInputFiles\\sample_svcg_2017.txt: 100%|███████████████████████████████| 17/17 [06:39<00:00, 23.48s/it]\n"
      ]
@@ -365,14 +375,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 114,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "foldername= 'SampleInputFiles'\n",
@@ -439,21 +453,21 @@
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
