bins_size_changes

--- a/FMac/combine_sample_files.ipynb
+++ b/FMac/combine_sample_files.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Prgramitically Log in to Freddie Mac Webisite and download all the files based on request\n",
@@ -24,10 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def fillNAN(df):\n",
@@ -54,10 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def changedatatype(df):\n",
@@ -69,10 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def fillNA(df):\n",
@@ -101,10 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def changedtype(df):\n",
@@ -118,10 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def createOriginationCombined(str):\n",
@@ -143,10 +131,12 @@
     "            sample_df = changedatatype(sample_df)\n",
     "            sample_df.dt_first_pi = pd.to_datetime(sample_df.dt_first_pi.apply(lambda x: x[:4] +'/'+x[4:]))\n",
     "            sample_df.dt_matr = pd.to_datetime(sample_df.dt_matr.apply(lambda x: x[:4] +'/'+x[4:]))\n",
-    "            sample_df['fico_bins'] = pd.cut(sample_df.fico[sample_df.fico<9999],5,include_lowest=True)\n",
-    "            sample_df['cltv_bins'] = pd.cut(sample_df.cltv[sample_df.cltv<999],7,include_lowest=True)\n",
-    "            sample_df['dti_bins'] = pd.cut(sample_df.dti[sample_df.dti<999],5,include_lowest=True)\n",
-    "            sample_df['ltv_bins'] = pd.cut(sample_df.ltv[sample_df.ltv<999],5,include_lowest=True)\n",
+    "            sample_df['fico_bins'] = pd.cut(sample_df.fico,[0,600,680,720,760,780,850,900,9999],include_lowest=True)\n",
+    "            sample_df['cltv_bins'] = pd.cut(sample_df.cltv,[0,6,50,70,80,90,110,150,200,999],include_lowest=True)\n",
+    "            sample_df['dti_bins'] = pd.cut(sample_df.dti,[0,27,36,46,65,999],include_lowest=True)\n",
+    "            sample_df['ltv_bins'] = pd.cut(sample_df.ltv,[6,50,70,80,90,105,999],include_lowest=True)\n",
+    "            sample_df['mi_pct'] = pd.cut(sample_df.mi_pct,[1,20,30,40,55,999],include_lowest=True)\n",
+    "\n",
     "            \n",
     "            sample_df['Year'] = ['19'+x if x=='99' else '20'+x for x in (sample_df['id_loan'].apply(lambda x: x[2:4]))]\n",
     "            sample_df.to_csv(file, mode='a', header=writeHeader1,index=False,encoding='utf-8')\n",
@@ -156,10 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def createPerformanceCombined(str): \n",
@@ -262,10 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
@@ -285,85 +271,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  0%|                                                                                           | 0/17 [00:00<?, ?it/s]\n",
-      "Working on  SampleInputFiles\\sample_orig_1999.txt:   0%|                                        | 0/17 [00:00<?, ?it/s]\n",
-      "Working on  SampleInputFiles\\sample_orig_1999.txt:   6%|█▉                              | 1/17 [00:02<00:40,  2.51s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2000.txt:   6%|█▉                              | 1/17 [00:02<00:40,  2.51s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2000.txt:  12%|███▊                            | 2/17 [00:04<00:37,  2.48s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2001.txt:  12%|███▊                            | 2/17 [00:04<00:37,  2.49s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2001.txt:  18%|█████▋                          | 3/17 [00:07<00:34,  2.50s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2002.txt:  18%|█████▋                          | 3/17 [00:07<00:34,  2.50s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2002.txt:  24%|███████▌                        | 4/17 [00:10<00:32,  2.54s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2004.txt:  24%|███████▌                        | 4/17 [00:10<00:32,  2.54s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2004.txt:  29%|█████████▍                      | 5/17 [00:12<00:30,  2.57s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2005.txt:  29%|█████████▍                      | 5/17 [00:12<00:30,  2.57s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2005.txt:  35%|███████████▎                    | 6/17 [00:15<00:28,  2.59s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2006.txt:  35%|███████████▎                    | 6/17 [00:15<00:28,  2.59s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2006.txt:  41%|█████████████▏                  | 7/17 [00:18<00:25,  2.59s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2007.txt:  41%|█████████████▏                  | 7/17 [00:18<00:25,  2.59s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2007.txt:  47%|███████████████                 | 8/17 [00:20<00:23,  2.60s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2008.txt:  47%|███████████████                 | 8/17 [00:20<00:23,  2.60s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2008.txt:  53%|████████████████▉               | 9/17 [00:23<00:20,  2.61s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2009.txt:  53%|████████████████▉               | 9/17 [00:23<00:20,  2.61s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2009.txt:  59%|██████████████████▏            | 10/17 [00:26<00:18,  2.62s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2010.txt:  59%|██████████████████▏            | 10/17 [00:26<00:18,  2.62s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2010.txt:  65%|████████████████████           | 11/17 [00:28<00:15,  2.63s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2011.txt:  65%|████████████████████           | 11/17 [00:28<00:15,  2.63s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2011.txt:  71%|█████████████████████▉         | 12/17 [00:31<00:13,  2.65s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2012.txt:  71%|█████████████████████▉         | 12/17 [00:31<00:13,  2.65s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2012.txt:  76%|███████████████████████▋       | 13/17 [00:34<00:10,  2.65s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2013.txt:  76%|███████████████████████▋       | 13/17 [00:34<00:10,  2.65s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2013.txt:  82%|█████████████████████████▌     | 14/17 [00:36<00:07,  2.64s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2014.txt:  82%|█████████████████████████▌     | 14/17 [00:36<00:07,  2.64s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2014.txt:  88%|███████████████████████████▎   | 15/17 [00:39<00:05,  2.63s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2016.txt:  88%|███████████████████████████▎   | 15/17 [00:39<00:05,  2.63s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2016.txt:  94%|█████████████████████████████▏ | 16/17 [00:42<00:02,  2.64s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2017.txt:  94%|█████████████████████████████▏ | 16/17 [00:42<00:02,  2.64s/it]\n",
-      "Working on  SampleInputFiles\\sample_orig_2017.txt: 100%|███████████████████████████████| 17/17 [00:44<00:00,  2.61s/it]\n",
-      "\n",
-      "  0%|                                                                                           | 0/17 [00:00<?, ?it/s]\n",
-      "Working on  SampleInputFiles\\sample_svcg_1999.txt:   0%|                                        | 0/17 [00:00<?, ?it/s]\n",
-      "Working on  SampleInputFiles\\sample_svcg_1999.txt:   6%|█▉                              | 1/17 [00:27<07:25, 27.85s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2000.txt:   6%|█▉                              | 1/17 [00:27<07:25, 27.85s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2000.txt:  12%|███▊                            | 2/17 [00:44<05:35, 22.33s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2001.txt:  12%|███▊                            | 2/17 [00:44<05:35, 22.34s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2001.txt:  18%|█████▋                          | 3/17 [01:04<05:01, 21.54s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2002.txt:  18%|█████▋                          | 3/17 [01:04<05:01, 21.54s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2002.txt:  24%|███████▌                        | 4/17 [01:28<04:46, 22.03s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2004.txt:  24%|███████▌                        | 4/17 [01:28<04:46, 22.03s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2004.txt:  29%|█████████▍                      | 5/17 [02:05<05:01, 25.13s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2005.txt:  29%|█████████▍                      | 5/17 [02:05<05:01, 25.14s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2005.txt:  35%|███████████▎                    | 6/17 [02:42<04:57, 27.03s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2006.txt:  35%|███████████▎                    | 6/17 [02:42<04:57, 27.03s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2006.txt:  41%|█████████████▏                  | 7/17 [03:12<04:35, 27.57s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2007.txt:  41%|█████████████▏                  | 7/17 [03:12<04:35, 27.57s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2007.txt:  47%|███████████████                 | 8/17 [03:41<04:09, 27.67s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2008.txt:  47%|███████████████                 | 8/17 [03:41<04:09, 27.67s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2008.txt:  53%|████████████████▉               | 9/17 [04:05<03:38, 27.27s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2009.txt:  53%|████████████████▉               | 9/17 [04:05<03:38, 27.27s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2009.txt:  59%|██████████████████▏            | 10/17 [04:31<03:09, 27.14s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2010.txt:  59%|██████████████████▏            | 10/17 [04:31<03:09, 27.14s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2010.txt:  65%|████████████████████           | 11/17 [04:56<02:41, 27.00s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2011.txt:  65%|████████████████████           | 11/17 [04:56<02:41, 27.00s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2011.txt:  71%|█████████████████████▉         | 12/17 [05:21<02:13, 26.76s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2012.txt:  71%|█████████████████████▉         | 12/17 [05:21<02:13, 26.76s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2012.txt:  76%|███████████████████████▋       | 13/17 [05:47<01:46, 26.74s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2013.txt:  76%|███████████████████████▋       | 13/17 [05:47<01:46, 26.74s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2013.txt:  82%|█████████████████████████▌     | 14/17 [06:09<01:19, 26.40s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2014.txt:  82%|█████████████████████████▌     | 14/17 [06:09<01:19, 26.40s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2014.txt:  88%|███████████████████████████▎   | 15/17 [06:27<00:51, 25.82s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2016.txt:  88%|███████████████████████████▎   | 15/17 [06:27<00:51, 25.82s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2016.txt:  94%|█████████████████████████████▏ | 16/17 [06:37<00:24, 24.85s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2017.txt:  94%|█████████████████████████████▏ | 16/17 [06:37<00:24, 24.85s/it]\n",
-      "Working on  SampleInputFiles\\sample_svcg_2017.txt: 100%|███████████████████████████████| 17/17 [06:39<00:00, 23.48s/it]\n"
+      "Working on  sample_orig_2017.txt: 100%|████████████████████████████████████████████████| 17/17 [00:38<00:00,  2.28s/it]\n",
+      "Working on  sample_svcg_2017.txt: 100%|████████████████████████████████████████████████| 17/17 [06:31<00:00, 23.06s/it]\n"
      ]
     }
    ],
@@ -380,94 +296,26 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "foldername= 'SampleInputFiles'\n",
-    "p = str(os.getcwd())+\"/\"+foldername+\"/sample_svcg_*.txt\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_1999.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2000.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2001.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2002.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2004.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2005.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2006.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2007.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2008.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2009.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2010.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2011.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2012.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2013.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2014.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2016.txt',\n",
-       " 'C:\\\\Users\\\\Dangar\\\\Desktop\\\\SF loan\\\\SF new/SampleInputFiles\\\\sample_svcg_2017.txt']"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "glob.glob(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'sample_svcg_2017.txt'"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(glob.glob(p)[-1]).split('\\\\')[-1]"
-   ]
   }
  ],
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
