--- a/FMac/combine_Historical_files.ipynb
+++ b/FMac/combine_Historical_files.ipynb
@@ -94,6 +94,7 @@
     "    df['misc_costs']=df['misc_costs'].fillna(0)\n",
     "    df['actual_loss']=df['actual_loss'].fillna(0)\n",
     "    df['modcost']=df['modcost'].fillna(0)\n",
+    "    df['stepmod_ind']=df['stepmod_ind'].fillna('X')\n",
     "    return df"
    ]
   },
@@ -126,9 +127,9 @@
     "    #print(str)\n",
     "    writeHeader1 = True\n",
     "    if \"sample\" in str:\n",
-    "        filename= \"SampleOriginationCombined.csv\"\n",
+    "        filename= \"SampleOriginationCombined_1.csv\"\n",
     "    else:\n",
-    "        filename= \"HistoricalOriginationCombined.csv\"\n",
+    "        filename= \"HistoricalOriginationCombined_1.csv\"\n",
     "    \n",
     "    abc = tqdm(glob.glob(str))\n",
     "      \n",
@@ -141,10 +142,12 @@
     "            sample_df = changedatatype(sample_df)\n",
     "            sample_df.dt_first_pi = pd.to_datetime(sample_df.dt_first_pi.apply(lambda x: x[:4] +'/'+x[4:]))\n",
     "            sample_df.dt_matr = pd.to_datetime(sample_df.dt_matr.apply(lambda x: x[:4] +'/'+x[4:]))\n",
-    "            sample_df['fico_bins'] = pd.cut(sample_df.fico[sample_df.fico<9999],5,include_lowest=True)\n",
-    "            sample_df['cltv_bins'] = pd.cut(sample_df.cltv[sample_df.cltv<999],7,include_lowest=True)\n",
-    "            sample_df['dti_bins'] = pd.cut(sample_df.dti[sample_df.dti<999],5,include_lowest=True)\n",
-    "            sample_df['ltv_bins'] = pd.cut(sample_df.ltv[sample_df.ltv<999],5,include_lowest=True)\n",
+    "            sample_df['fico_bins'] = pd.cut(sample_df.fico,[0,600,680,720,760,780,850,900,9999],include_lowest=True)\n",
+    "            sample_df['cltv_bins'] = pd.cut(sample_df.cltv,[0,6,50,70,80,90,110,150,200,999],include_lowest=True)\n",
+    "            sample_df['dti_bins'] = pd.cut(sample_df.dti,[0,27,36,46,65,999],include_lowest=True)\n",
+    "            sample_df['ltv_bins'] = pd.cut(sample_df.ltv,[6,50,70,80,90,105,999],include_lowest=True)\n",
+    "            sample_df['mi_pct'] = pd.cut(sample_df.mi_pct,[1,20,30,40,55,999],include_lowest=True)\n",
+    "\n",
     "            \n",
     "            sample_df['Year'] = ['19'+x if x=='99' else '20'+x for x in (sample_df['id_loan'].apply(lambda x: x[2:4]))]\n",
     "            sample_df.to_csv(file, mode='a', header=writeHeader1,index=False,encoding='utf-8')\n",
@@ -401,21 +404,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
