--- a/FMac/combine_Historical_files.ipynb
+++ b/FMac/combine_Historical_files.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
@@ -24,9 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def fillNAN(df):\n",
@@ -54,9 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def changedatatype(df):\n",
@@ -69,9 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def fillNA(df):\n",
@@ -101,9 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def changedtype(df):\n",
@@ -117,19 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def createOriginationCombined(str):\n",
     "    #print(str)\n",
     "    writeHeader1 = True\n",
     "    if \"sample\" in str:\n",
-    "        filename= \"SampleOriginationCombined_1.csv\"\n",
+    "        filename= \"SampleOriginationCombined.csv\"\n",
     "    else:\n",
-    "        filename= \"HistoricalOriginationCombined_1.csv\"\n",
+    "        filename= \"HistoricalOriginationCombined.csv\"\n",
     "    \n",
     "    abc = tqdm(glob.glob(str))\n",
     "      \n",
@@ -146,7 +134,7 @@
     "            sample_df['cltv_bins'] = pd.cut(sample_df.cltv,[0,6,50,70,80,90,110,150,200,999],include_lowest=True)\n",
     "            sample_df['dti_bins'] = pd.cut(sample_df.dti,[0,27,36,46,65,999],include_lowest=True)\n",
     "            sample_df['ltv_bins'] = pd.cut(sample_df.ltv,[6,50,70,80,90,105,999],include_lowest=True)\n",
-    "            sample_df['mi_pct'] = pd.cut(sample_df.mi_pct,[1,20,30,40,55,999],include_lowest=True)\n",
+    "            sample_df['mi_pct_bins'] = pd.cut(sample_df.mi_pct,[1,20,30,40,55,999],include_lowest=True)\n",
     "\n",
     "            \n",
     "            sample_df['Year'] = ['19'+x if x=='99' else '20'+x for x in (sample_df['id_loan'].apply(lambda x: x[2:4]))]\n",
@@ -157,10 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def createPerformanceCombined(str): \n",
@@ -263,10 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
@@ -284,9 +268,8 @@
     "    orig1_df = createOriginationCombined(sampleOrigFiles)\n",
     "    per1_df = createPerformanceCombined(samplePerfFiles)\n",
     "    \n",
-    "    combined_sample_df = orig1_df.join(per1_df,on='id_loan',lsuffix='_')\n",
-    "    combined_sample_df.drop('id_loan_',axis=1,inplace=True)\n",
-    "    combined_sample_df.to_csv('combined_SF_smaple_data.csv', encoding='utf-8', index=False)\n",
+    "    combined_df = orig1_df.merge(per1_df,on='id_loan')\n",
+    "    combined_df.to_csv('combined_SF_smaple_data.csv', index=False)\n",
     "    \n",
     "#     orig2_df = createOriginationCombined(historical_Files)\n",
     "#     per2_df = createPerformanceCombined(historical_timeFiles)\n",
@@ -297,93 +280,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/dangar/Desktop/SF loan/FreddieMac_Single_Loan_Analysis_MachineLearning-master/SampleInputFiles/sample_svcg_*.txt\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "  0%|          | 0/17 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2016.txt:   0%|          | 0/17 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2016.txt:   6%|▌         | 1/17 [01:23<22:09, 83.11s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2009.txt:   6%|▌         | 1/17 [01:23<22:09, 83.11s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2009.txt:  12%|█▏        | 2/17 [04:29<33:44, 134.96s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2010.txt:  12%|█▏        | 2/17 [04:29<33:44, 134.97s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2010.txt:  18%|█▊        | 3/17 [06:27<30:07, 129.14s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2008.txt:  18%|█▊        | 3/17 [06:27<30:08, 129.15s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2008.txt:  24%|██▎       | 4/17 [08:04<26:14, 121.08s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2005.txt:  24%|██▎       | 4/17 [08:04<26:14, 121.08s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2005.txt:  29%|██▉       | 5/17 [09:57<23:52, 119.40s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2004.txt:  29%|██▉       | 5/17 [09:57<23:52, 119.41s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2004.txt:  35%|███▌      | 6/17 [12:16<22:30, 122.75s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2001.txt:  35%|███▌      | 6/17 [12:16<22:30, 122.75s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2001.txt:  41%|████      | 7/17 [13:46<19:40, 118.04s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2017.txt:  41%|████      | 7/17 [13:46<19:40, 118.04s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2017.txt:  47%|████▋     | 8/17 [14:06<15:52, 105.81s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2007.txt:  47%|████▋     | 8/17 [14:06<15:52, 105.81s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2007.txt:  53%|█████▎    | 9/17 [15:43<13:58, 104.86s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2014.txt:  53%|█████▎    | 9/17 [15:43<13:58, 104.87s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2014.txt:  59%|█████▉    | 10/17 [17:11<12:02, 103.19s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2006.txt:  59%|█████▉    | 10/17 [17:11<12:02, 103.19s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2006.txt:  65%|██████▍   | 11/17 [18:51<10:16, 102.82s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2013.txt:  65%|██████▍   | 11/17 [18:51<10:16, 102.82s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2013.txt:  71%|███████   | 12/17 [20:23<08:29, 101.96s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2012.txt:  71%|███████   | 12/17 [20:23<08:29, 101.96s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2012.txt:  76%|███████▋  | 13/17 [22:00<06:46, 101.56s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_1999.txt:  76%|███████▋  | 13/17 [22:00<06:46, 101.56s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_1999.txt:  82%|████████▏ | 14/17 [23:35<05:03, 101.08s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2011.txt:  82%|████████▏ | 14/17 [23:35<05:03, 101.08s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2011.txt:  88%|████████▊ | 15/17 [25:09<03:21, 100.65s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2000.txt:  88%|████████▊ | 15/17 [25:09<03:21, 100.65s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2000.txt:  94%|█████████▍| 16/17 [26:36<01:39, 99.77s/it] \u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2002.txt:  94%|█████████▍| 16/17 [26:36<01:39, 99.77s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "Working on  sample_svcg_2002.txt: 100%|██████████| 17/17 [28:09<00:00, 99.36s/it]\u001b[A\u001b[A\n",
-      "\n",
-      "\u001b[A\u001b[A"
+      "Working on  sample_orig_2017.txt: 100%|████████████████████████████████████████████████| 17/17 [00:40<00:00,  2.39s/it]\n",
+      "Working on  sample_svcg_2004.txt:  24%|███████████▌                                     | 4/17 [01:31<04:57, 22.89s/it]"
      ]
     }
    ],
@@ -398,6 +303,20 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
