--- a/FMac/combine_Historical_files.ipynb
+++ b/FMac/combine_Historical_files.ipynb
@@ -111,6 +111,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def chnge_code_zero(x):\n",
+    "    if x=='00':\n",
+    "        return 'C'\n",
+    "    elif x=='01':\n",
+    "        return 'P'\n",
+    "    elif x=='06':\n",
+    "        return 'R'\n",
+    "    elif x=='03':\n",
+    "        return 'S'\n",
+    "    elif x=='09':\n",
+    "        return 'F'\n",
+    "def chnge_delinquecy(x):\n",
+    "    if x=='0':\n",
+    "        return 'C'\n",
+    "    elif x not in list(map(str,list(range(1,9))))+['R']:\n",
+    "        return '9+'\n",
+    "    else:\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def createOriginationCombined(str):\n",
     "    #print(str)\n",
     "    writeHeader1 = True\n",
@@ -145,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,17 +197,19 @@
     "#             perf_df['delq_sts'] = [ 0 if x=='XX' else x for x in (perf_df['delq_sts'].apply(lambda x: x))]\n",
     "            perf_df.loc[(perf_df.net_sale_proceeds=='U')|(perf_df.net_sale_proceeds=='C'),'net_sale_proceeds'] = '0.0'\n",
     "#             perf_df['net_sale_proceeds'] = [ '0.0' if x=='C' else x for x in (perf_df['net_sale_proceeds'].apply(lambda x: x))]\n",
-    "\n",
+    "            \n",
+    "            perf_df.cd_zero_bal = perf_df.cd_zero_bal.apply(lambda x : chng(x))\n",
+    "            \n",
     "            perf_df = fillNA(perf_df)\n",
     "            perf_df = changedtype(perf_df)\n",
     "\n",
-    "            ve =perf_df.drop(perf_df[(perf_df.cd_zero_bal=='03')|(perf_df.cd_zero_bal=='09')].index)\n",
+    "            ve =perf_df.drop(perf_df[(perf_df.cd_zero_bal=='S')|(perf_df.cd_zero_bal=='F')].index)\n",
     "            h = ve.groupby(by='id_loan').last().reset_index()\n",
-    "            defauled_upb = h.loc[h.id_loan.isin(perf_df[(perf_df.cd_zero_bal=='03')|(perf_df.cd_zero_bal=='09')].id_loan.values),['id_loan','current_upb']]\n",
+    "            defauled_upb = h.loc[h.id_loan.isin(perf_df[(perf_df.cd_zero_bal=='S')|(perf_df.cd_zero_bal=='F')].id_loan.values),['id_loan','current_upb']]\n",
     "\n",
-    "            ve1 =perf_df.drop(perf_df[(perf_df.cd_zero_bal=='01')].index)\n",
+    "            ve1 =perf_df.drop(perf_df[(perf_df.cd_zero_bal=='P')].index)\n",
     "            h1 = ve1.groupby(by='id_loan').last().reset_index()\n",
-    "            prepaid_upb = h1.loc[h1.id_loan.isin(perf_df[(perf_df.cd_zero_bal=='01')].id_loan.values),['id_loan','current_upb']]\n",
+    "            prepaid_upb = h1.loc[h1.id_loan.isin(perf_df[(perf_df.cd_zero_bal=='P')].id_loan.values),['id_loan','current_upb']]\n",
     "\n",
     "            lpi = perf_df.loc[(perf_df.delq_sts=='0'),['id_loan','svcg_cycle']]\n",
     "            lpi =lpi.groupby(by='id_loan').last().reset_index()\n",
@@ -209,28 +237,28 @@
     "            perf_df.delq_sts_180_date = pd.to_datetime(perf_df.delq_sts_180_date.astype('str').apply(lambda x: x[:4] +'/'+x[4:]))\n",
     "            perf_df.last_payment_date = pd.to_datetime(perf_df.last_payment_date.astype('str').apply(lambda x: x[:4] +'/'+x[4:]))\n",
     "\n",
-    "            perf_df['GT_90_days_deliquecy'] = perf_df.delq_sts.values\n",
-    "            perf_df['GT_90_days_deliquecy'] = perf_df['GT_90_days_deliquecy'].apply(lambda x: 0 if (x=='0') | (x=='1') | (x=='2')|(x=='XX')  else 1)\n",
+    "            perf_df['GT_90_days_delinquecy'] = perf_df.delq_sts.values\n",
+    "            perf_df['GT_90_days_delinquecy'] = perf_df['GT_90_days_delinquecy'].apply(lambda x: 0 if (x=='0') | (x=='1') | (x=='2')|(x=='XX')  else 1)\n",
     "\n",
     "            perf_df['default'] = perf_df.cd_zero_bal.values\n",
-    "            perf_df['default'] = perf_df['default'].apply(lambda x: 1 if (x=='03') | (x=='09') else 0)\n",
+    "            perf_df['default'] = perf_df['default'].apply(lambda x: 1 if (x=='S') | (x=='F') else 0)\n",
     "\n",
     "            perf_df['prepayment']=0\n",
-    "            perf_df.loc[(perf_df.cd_zero_bal=='01')&(perf_df.mths_remng!=0),'prepayment'] = 1 \n",
+    "            perf_df.loc[(perf_df.cd_zero_bal=='P')&(perf_df.mths_remng!=0),'prepayment'] = 1 \n",
     "\n",
-    "            de = perf_df[perf_df.default==1]\n",
-    "            months_deliquecny = (pd.to_datetime(de.dt_zero_bal.values).year - pd.to_datetime(de.last_payment_date.values).year)*12 + (pd.to_datetime(de.dt_zero_bal.values).month - pd.to_datetime(de.last_payment_date.values).month)\n",
+    "#             de = perf_df[perf_df.default==1]\n",
+    "#             months_delinquecny = (pd.to_datetime(de.dt_zero_bal.values).year - pd.to_datetime(de.last_payment_date.values).year)*12 + (pd.to_datetime(de.dt_zero_bal.values).month - pd.to_datetime(de.last_payment_date.values).month)\n",
     "\n",
     "            c = perf_df[(perf_df.dt_lst_pi!='1899-01-01')&(perf_df.dt_zero_bal!='1899-01-01')]\n",
-    "            o = (pd.to_datetime(c.dt_zero_bal.values).year - pd.to_datetime(c.last_payment_date.values).year)*12 + (pd.to_datetime(c.dt_zero_bal.values).month - pd.to_datetime(c.last_payment_date.values).month)\n",
+    "            o = (pd.to_datetime(c.dt_zero_bal.values).year - pd.to_datetime(c.dt_lst_pi.values).year)*12 + (pd.to_datetime(c.dt_zero_bal.values).month - pd.to_datetime(c.dt_lst_pi.values).month)\n",
     "\n",
     "            perf_df['lpi2zero'] = 0\n",
     "            perf_df.loc[(perf_df.dt_lst_pi!='1899-01-01')&(perf_df.dt_zero_bal!='1899-01-01'),'lpi2zero'] = o\n",
     "\n",
     "            de_i = perf_df.loc[(perf_df.lpi2zero!=0)&(perf_df.default==1)] \n",
     "\n",
-    "            perf_df['deliquent_interest'] = 0\n",
-    "            perf_df.loc[(perf_df.lpi2zero!=0)&(perf_df.default==1),'deliquent_interest'] = (de_i.lpi2zero) * (de_i.defaulted_upb - de_i.non_int_brng_upb) * (de_i.current_int_rt - 0.35) / 1200\n",
+    "            perf_df['delinquent_interest'] = 0\n",
+    "            perf_df.loc[(perf_df.lpi2zero!=0)&(perf_df.default==1),'delinquent_interest'] = (de_i.lpi2zero) * (de_i.defaulted_upb - de_i.non_int_brng_upb) * (de_i.current_int_rt - 0.35) / 1200\n",
     "            \n",
     "            perf_df['total_costs'] = perf_df[['legal_costs','maint_pres_costs', 'taxes_ins_costs',\n",
     "                                  'misc_costs']].sum(axis=1)\n",
@@ -242,6 +270,7 @@
     "\n",
     "            perf_df.loc[perf_df.net_loss!=0,'loss_severity'] = perf_df.loc[perf_df.net_loss!=0,['defaulted_upb','net_loss']].T.apply(lambda x: x[1]/x[0])\n",
     "            \n",
+    "            perf_df.delq_sts = perf_df.delq_sts.apply(lambda x : chnge_delinquecy(x))\n",
     "            perf_df.to_csv(file, mode='a', header=writeHeader2,index=False,encoding='utf-8')\n",
     "            writeHeader2=False\n",
     "    return perf_df"
@@ -249,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,30 +294,35 @@
     "    historical_timeFiles=str(os.getcwd())+\"/\"+foldername2+\"/historical_data1_*.txt\"\n",
     "    \n",
     "    \n",
-    "    orig1_df = createOriginationCombined(sampleOrigFiles)\n",
-    "    per1_df = createPerformanceCombined(samplePerfFiles)\n",
+    "    orig1_file = createOriginationCombined(sampleOrigFiles)\n",
+    "    per1_file = createPerformanceCombined(samplePerfFiles)\n",
     "    \n",
+    "    orig1_df = pd.read_csv(orig1_file)\n",
+    "    per1_df = pd.read_csv(per1_file,dtype={'delq_sts':'str'})\n",
     "    combined_df = orig1_df.merge(per1_df,on='id_loan')\n",
     "    combined_df.to_csv('combined_SF_smaple_data.csv', index=False)\n",
     "    \n",
-    "#     orig2_df = createOriginationCombined(historical_Files)\n",
-    "#     per2_df = createPerformanceCombined(historical_timeFiles)\n",
+    "#     orig2_file = createOriginationCombined(historical_Files)\n",
+    "#     per2_file = createPerformanceCombined(historical_timeFiles)\n",
+    "\n",
+    "#     orig2_df = pd.read_csv(orig2_file)\n",
+    "#     per2_df = pd.read_csv(per2_file,dtype={'delq_sts':'str'})\n",
     "    \n",
-    "#     combined2_df = orig_df.merge(per_df,on='id_loan')\n",
-    "#     combined_df.to_csv('combined_SF_historical_all_data.csv', encoding='utf-8', index=False)"
+    "#     combined2_df = orig2_df.merge(per2_df,on='id_loan')\n",
+    "#     combined2_df.to_csv('combined_SF_historical_all_data.csv', encoding='utf-8', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Working on  sample_orig_2017.txt: 100%|████████████████████████████████████████████████| 17/17 [00:40<00:00,  2.39s/it]\n",
-      "Working on  sample_svcg_2004.txt:  24%|███████████▌                                     | 4/17 [01:31<04:57, 22.89s/it]"
+      "Working on  sample_orig_2017.txt: 100%|████████████████████████████████████████████████| 19/19 [00:46<00:00,  2.47s/it]\n",
+      "Working on  sample_svcg_2017.txt: 100%|████████████████████████████████████████████████| 19/19 [07:55<00:00, 25.04s/it]\n"
      ]
     }
    ],
@@ -296,22 +330,6 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
