--- a/FMac/combine_sample_files.ipynb
+++ b/FMac/combine_sample_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def orig_summary_statistics(x):\n",
+    "    names = {\n",
+    "        'loan_count': x['id_loan'].count(),\n",
+    "        'total_orig_UPB ($B)':  x['orig_upb'].sum()/1000000000,\n",
+    "        'average_orig_UPB':  x['orig_upb'].mean(),\n",
+    "        'weighted_average_fico':  (x.loc[x.fico!=9999,'orig_upb'] * x.loc[x.fico!=9999,'fico']).sum()/x.loc[x.fico!=9999,'orig_upb'].sum(),\n",
+    "        'weighted_average_cltv':  (x.loc[x.cltv!=999,'orig_upb'] * x.loc[x.cltv!=999,'cltv']).sum()/x.loc[x.cltv!=999,'orig_upb'].sum(),\n",
+    "        'weighted_average_ltv':  (x.loc[x.ltv!=999,'orig_upb'] * x.loc[x.ltv!=999,'ltv']).sum()/x.loc[x.ltv!=999,'orig_upb'].sum(),\n",
+    "        'weighted_average_dti':  (x.loc[x.dti!=999,'orig_upb'] * x.loc[x.dti!=999,'dti']).sum()/x.loc[x.dti!=999,'orig_upb'].sum(),\n",
+    "        }\n",
+    "\n",
+    "    return pd.Series(names, index=['loan_count', 'total_orig_UPB ($B)', 'average_orig_UPB',\n",
+    "                                   'weighted_average_fico', 'weighted_average_cltv', 'weighted_average_ltv','weighted_average_dti'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def performance_summary_statistics(x):\n",
+    "    names = {\n",
+    "        'loan_count': x['id_loan'].count(),\n",
+    "        'prepay_loan(%)':  x.loc[x.cd_zero_bal.isin(['P','R']),'id_loan'].count()*100/x['id_loan'].count(),\n",
+    "        'default_loan(%)' :  x.loc[x.default==1,'id_loan'].count()*100/x['id_loan'].count(),\n",
+    "        'active_loan(%)':  x.loc[x.cd_zero_bal=='C','id_loan'].count()*100/x['id_loan'].count(),\n",
+    "        'cumulative_post‐default_event_repurchase(%)':  x.loc[(x.cd_zero_bal.isin(['S','F']))&(x.repch_flag=='Y'),'id_loan'].count()*100/x['id_loan'].count(),\n",
+    "        'ever_D180(%)':  x.loc[(x.delq_sts_180_upb!=0)|(x.delq_sts=='R'),'id_loan'].count()*100/x['id_loan'].count(),\n",
+    "        'D180_and_pre‐D180_credit_event(%)':  x.loc[(x.delq_sts_180_upb!=0)|(x.delq_sts=='R')|(x.default==1),'id_loan'].count()*100/x['id_loan'].count(),\n",
+    "        'cumulative_modification(%)' : x.loc[x.flag_mod=='Y','id_loan'].count()*100/x['id_loan'].count(),\n",
+    "        'actuall_loss($M)':  -x.actual_loss.sum()/1000000,\n",
+    "        'total_orig_UPB($B)':  x.orig_upb.sum()/1000000000,\n",
+    "        'prepaid_upb(%)':  x.prepaid_upb.sum()*100/x.orig_upb.sum(),\n",
+    "        'defaulted_upb(%)': x.defaulted_upb.sum()*100/x.orig_upb.sum(),\n",
+    "        'current_upb(%)':  x.current_upb.sum()*100/x.orig_upb.sum(),\n",
+    "        'post-defaulted_upb(%)':  x.loc[(com_df.default==1)&(x.repch_flag=='Y'),'defaulted_upb'].sum()*100/x.orig_upb.sum(),\n",
+    "        'original_UPB_ever_D180(%)':  (x.delq_sts_180_upb.sum()+x.loc[(x.cd_zero_bal=='F'),'defaulted_upb'].sum()+x.loc[(x.delq_sts=='R')&(x.delq_sts_180_upb==0),'current_upb'].sum())*100/x.orig_upb.sum(),\n",
+    "        'original_UPB_D180_and_pre_D180_credit_event(%)':  (x.delq_sts_180_upb.sum()+x.loc[(x.default==1),'defaulted_upb'].sum()+x.loc[(x.delq_sts=='R')&(x.delq_sts_180_upb==0),'current_upb'].sum())*100/x.orig_upb.sum(),\n",
+    "        'UPB_weighted_cumulative_modification(%)':  x.loc[x.flag_mod=='Y','current_upb'].sum()*100/x.orig_upb.sum()\n",
+    "    }\n",
+    "\n",
+    "    return pd.Series(names, index=['loan_count', 'prepay_loan(%)', 'default_loan(%)',\n",
+    "                                   'active_loan(%)', 'cumulative_post‐default_event_repurchase(%)', 'ever_D180(%)'\n",
+    "                                   ,'D180_and_pre‐D180_credit_event(%)','actuall_loss($M)','total_orig_UPB($B)',\n",
+    "                                  'prepaid_upb(%)','defaulted_upb(%)','current_upb(%)','post-defaulted_upb(%)','original_UPB_ever_D180(%)'\n",
+    "                                  ,'original_UPB_D180_and_pre_D180_credit_event(%)','UPB_weighted_cumulative_modification(%)'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,9 +271,9 @@
     "            h = ve.groupby(by='id_loan').last().reset_index()\n",
     "            defauled_upb = h.loc[h.id_loan.isin(perf_df[(perf_df.cd_zero_bal=='S')|(perf_df.cd_zero_bal=='F')].id_loan.values),['id_loan','current_upb']]\n",
     "\n",
-    "            ve1 =perf_df.drop(perf_df[(perf_df.cd_zero_bal=='P')].index)\n",
+    "            ve1 =perf_df.drop(perf_df[(perf_df.cd_zero_bal=='P')|(perf_df.cd_zero_bal=='R')].index)\n",
     "            h1 = ve1.groupby(by='id_loan').last().reset_index()\n",
-    "            prepaid_upb = h1.loc[h1.id_loan.isin(perf_df[(perf_df.cd_zero_bal=='P')].id_loan.values),['id_loan','current_upb']]\n",
+    "            prepaid_upb = h1.loc[h1.id_loan.isin(perf_df[(perf_df.cd_zero_bal=='P')|(perf_df.cd_zero_bal=='R')].id_loan.values),['id_loan','current_upb']]\n",
     "\n",
     "            lpi = perf_df.loc[(perf_df.delq_sts=='0'),['id_loan','svcg_cycle']]\n",
     "            lpi =lpi.groupby(by='id_loan').last().reset_index()\n",
@@ -287,73 +349,33 @@
     "    ts = time.time()\n",
     "    foldername= 'SampleInputFiles'\n",
     "    \n",
-    "    sampleOrigFiles=str(os.getcwd())+\"/\"+foldername+\"/sample_orig_*.txt\"\n",
-    "    samplePerfFiles=str(os.getcwd())+\"/\"+foldername+\"/sample_svcg_*.txt\"\n",
+    "#     sampleOrigFiles=str(os.getcwd())+\"/\"+foldername+\"/sample_orig_*.txt\"\n",
+    "#     samplePerfFiles=str(os.getcwd())+\"/\"+foldername+\"/sample_svcg_*.txt\"\n",
     "    \n",
-    "    orig_file = createOriginationCombined(sampleOrigFiles)\n",
-    "    per_file = createPerformanceCombined(samplePerfFiles)\n",
+    "#     orig_file = createOriginationCombined(sampleOrigFiles)\n",
+    "#     per_file = createPerformanceCombined(samplePerfFiles)\n",
     "    \n",
-    "    orig_df = pd.read_csv(orig_file)\n",
-    "    per_df = pd.read_csv(per_file,dtype={'delq_sts':'str'})\n",
-    "    combined_df = orig_df.merge(per_df,on='id_loan')\n",
-    "    combined_df.to_csv('combined_SF_smaple_data.csv', encoding='utf-8', index=False)"
+    "#     orig_df = pd.read_csv(orig_file)\n",
+    "#     per_df = pd.read_csv(per_file,dtype={'delq_sts':'str'})\n",
+    "#     combined_df = orig_df.merge(per_df,on='id_loan')\n",
+    "#     combined_df.to_csv('combined_SF_smaple_data.csv', encoding='utf-8', index=False)\n",
+    "    \n",
+    "    com1_df = pd.read_csv('combined_SF_smaple_data.csv')\n",
+    "\n",
+    "    orig_summary_statistic1 = com1_df.groupby(\"Year\").apply(orig_summary_statistics).round(1)\n",
+    "    performance_summary_statistic1 = com1_df.groupby(\"Year\").apply(performance_summary_statistics).round(1)\n",
+    "\n",
+    "    orig_summary_statistic1.to_csv(\"sample_SF_orig_summary_Statistics.csv\",index=False)\n",
+    "    performance_summary_statistic1.to_csv(\"sample_SF_performance_summary_Statistics.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|                                                                                           | 0/19 [00:00<?, ?it/s]\n",
-      "Working on  sample_orig_1999.txt:   0%|                                                         | 0/19 [00:00<?, ?it/s]\n",
-      "Working on  sample_orig_1999.txt:   5%|██▌                                              | 1/19 [00:02<00:49,  2.75s/it]\n",
-      "Working on  sample_orig_2000.txt:   5%|██▌                                              | 1/19 [00:02<00:49,  2.75s/it]\n",
-      "Working on  sample_orig_2000.txt:  11%|█████▏                                           | 2/19 [00:05<00:46,  2.74s/it]\n",
-      "Working on  sample_orig_2001.txt:  11%|█████▏                                           | 2/19 [00:05<00:46,  2.74s/it]\n",
-      "Working on  sample_orig_2001.txt:  16%|███████▋                                         | 3/19 [00:08<00:44,  2.77s/it]\n",
-      "Working on  sample_orig_2002.txt:  16%|███████▋                                         | 3/19 [00:08<00:44,  2.77s/it]\n",
-      "Working on  sample_orig_2002.txt:  21%|██████████▎                                      | 4/19 [00:11<00:41,  2.80s/it]\n",
-      "Working on  sample_orig_2003.txt:  21%|██████████▎                                      | 4/19 [00:11<00:41,  2.80s/it]\n",
-      "Working on  sample_orig_2003.txt:  26%|████████████▉                                    | 5/19 [00:14<00:39,  2.84s/it]\n",
-      "Working on  sample_orig_2004.txt:  26%|████████████▉                                    | 5/19 [00:14<00:39,  2.84s/it]\n",
-      "Working on  sample_orig_2004.txt:  32%|███████████████▍                                 | 6/19 [00:17<00:37,  2.88s/it]\n",
-      "Working on  sample_orig_2005.txt:  32%|███████████████▍                                 | 6/19 [00:17<00:37,  2.88s/it]\n",
-      "Working on  sample_orig_2005.txt:  37%|██████████████████                               | 7/19 [00:20<00:34,  2.89s/it]\n",
-      "Working on  sample_orig_2006.txt:  37%|██████████████████                               | 7/19 [00:20<00:34,  2.89s/it]\n",
-      "Working on  sample_orig_2006.txt:  42%|████████████████████▋                            | 8/19 [00:23<00:32,  2.91s/it]\n",
-      "Working on  sample_orig_2007.txt:  42%|████████████████████▋                            | 8/19 [00:23<00:32,  2.91s/it]\n",
-      "Working on  sample_orig_2007.txt:  47%|███████████████████████▏                         | 9/19 [00:26<00:29,  2.91s/it]\n",
-      "Working on  sample_orig_2008.txt:  47%|███████████████████████▏                         | 9/19 [00:26<00:29,  2.92s/it]\n",
-      "Working on  sample_orig_2008.txt:  53%|█████████████████████████▎                      | 10/19 [00:29<00:26,  2.93s/it]\n",
-      "Working on  sample_orig_2009.txt:  53%|█████████████████████████▎                      | 10/19 [00:29<00:26,  2.93s/it]\n",
-      "Working on  sample_orig_2009.txt:  58%|███████████████████████████▊                    | 11/19 [00:32<00:23,  2.93s/it]\n",
-      "Working on  sample_orig_2010.txt:  58%|███████████████████████████▊                    | 11/19 [00:32<00:23,  2.93s/it]\n",
-      "Working on  sample_orig_2010.txt:  63%|██████████████████████████████▎                 | 12/19 [00:35<00:20,  2.93s/it]\n",
-      "Working on  sample_orig_2011.txt:  63%|██████████████████████████████▎                 | 12/19 [00:35<00:20,  2.93s/it]\n",
-      "Working on  sample_orig_2011.txt:  68%|████████████████████████████████▊               | 13/19 [00:38<00:17,  2.93s/it]\n",
-      "Working on  sample_orig_2012.txt:  68%|████████████████████████████████▊               | 13/19 [00:38<00:17,  2.93s/it]\n",
-      "Working on  sample_orig_2012.txt:  74%|███████████████████████████████████▎            | 14/19 [00:40<00:14,  2.92s/it]\n",
-      "Working on  sample_orig_2013.txt:  74%|███████████████████████████████████▎            | 14/19 [00:40<00:14,  2.92s/it]\n",
-      "Working on  sample_orig_2013.txt:  79%|█████████████████████████████████████▉          | 15/19 [00:43<00:11,  2.91s/it]\n",
-      "Working on  sample_orig_2014.txt:  79%|█████████████████████████████████████▉          | 15/19 [00:43<00:11,  2.91s/it]\n",
-      "Working on  sample_orig_2014.txt:  84%|████████████████████████████████████████▍       | 16/19 [00:46<00:08,  2.91s/it]\n",
-      "Working on  sample_orig_2015.txt:  84%|████████████████████████████████████████▍       | 16/19 [00:46<00:08,  2.91s/it]\n",
-      "Working on  sample_orig_2015.txt:  89%|██████████████████████████████████████████▉     | 17/19 [00:49<00:05,  2.90s/it]\n",
-      "Working on  sample_orig_2016.txt:  89%|██████████████████████████████████████████▉     | 17/19 [00:49<00:05,  2.90s/it]\n",
-      "Working on  sample_orig_2016.txt:  95%|█████████████████████████████████████████████▍  | 18/19 [00:52<00:02,  2.89s/it]\n",
-      "Working on  sample_orig_2017.txt:  95%|█████████████████████████████████████████████▍  | 18/19 [00:52<00:02,  2.89s/it]\n",
-      "Working on  sample_orig_2017.txt: 100%|████████████████████████████████████████████████| 19/19 [00:52<00:00,  2.78s/it]\n",
-      "\n",
-      "  0%|                                                                                           | 0/19 [00:00<?, ?it/s]\n",
-      "Working on  sample_svcg_1999.txt:   0%|                                                         | 0/19 [00:00<?, ?it/s]"
-     ]
-    }
-   ],
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    main()"
