--- a/FMac/SF_Loan_all_historical_files_downloader.ipynb
+++ b/FMac/SF_Loan_all_historical_files_downloader.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,10 @@
     "        z = ZipFile(BytesIO(r.content))\n",
     "        z.extractall(path)\n",
     "        if more:\n",
-    "            p1 = glob.glob(path+\"/historical_data1*.zip\")[0]\n",
-    "            with ZipFile(p1,mode='r') as zip:\n",
-    "                zip.extractall(path)"
+    "            p1 = glob.glob(path+\"/historical_data1_Q*.zip\")\n",
+    "            for x in p1:\n",
+    "                with ZipFile(x,mode='r') as zip:\n",
+    "                    zip.extractall(path)"
    ]
   },
   {
